--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -124,7 +124,7 @@
                                         Agregar a carrito
                                     </button>-->
 
-                                        <button type="button" class="btn btn-primary"
+                                        <button type="button" class="buttonown bluebutton"
                                             th:onclick="'obtenerIdsC('+${producto.id_producto}+')'">
                                             Agregar a carrito
                                         </button>
