--- a/bin/src/main/resources/templates/block/loginBlock.html
+++ b/bin/src/main/resources/templates/block/loginBlock.html
@@ -1,41 +1,39 @@
 <div xmlns:th="http://www.thymeleaf.org">
     <div class="container rob">
         <div class="row justify-content-md-center">
-            <div class="col col-lg-6">
-                <p></p>
-                <p class="fs-2 text-center">Iniciar Sesion</p>
-                <div th:if="${param.error}">
-                    Invalid username and password.
-                </div>
-                <div th:if="${param.logout}">
-                    You have been logged out.
-                </div>
-                <form th:action="@{/login}" method="post">
-                    <div class="mb-3"><label class="form-label"> User Name : <input type="email" name="email" /> </label></div>
-                    <div class="mb-3"><label class="form-label"> Password: <input type="password" name="password" /> </label></div>
-                    <div class="mb-3"><input type="submit" value="Sign In" /></div>
-                </form> 
-                <form th:action="@{/register}" method="post">
-                    <div class="mb-3"><input type="submit" value="Registrarse" /></div>
-                </form> 
-               <!--  <form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1"
-                            aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
+            <div class="col col-lg-5">
+                <div class="wrapper">
+                    <div class="title-text">
+                        <div class="title login">
+                            Iniciar Sesion
                         </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    <div th:if="${param.error}">
+                        Invalid username and password.
                     </div>
-                    <div class="mb-3">
-                        <label class="form-check-label" for="exampleCheck1">Have you not registered? <a
-                                href="register.html">Sign up</a> </label>
+                    <div th:if="${param.logout}">
+                        You have been logged out.
                     </div>
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </form> -->
+                    <div class="form-container">
+                        <div class="form-inner">
+                            <form th:action="@{/login}" method="post" class="login">
+                                <div class="field">
+                                    <input type="email" name="email" placeholder="Email Address" required>
+                                </div>
+                                <div class="field">
+                                    <input type="password" name="password" placeholder="Password" required>
+                                </div>
+                                <div class="field btn">
+                                    <div class="btn-layer"></div>
+                                    <input type="submit" value="Aceptar">
+                                </div>
+                                <div class="signup-link">
+                                    Not a member? <a href="/register">Signup now</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
