fix products img, bug delete frm carrito

--- a/src/main/resources/templates/carritoRegistro.html
+++ b/src/main/resources/templates/carritoRegistro.html
@@ -63,7 +63,10 @@
 														<th th:text="${producto.nombre}" />
 													</h5>
 													<p class="card-text">
-														<th th:text="${producto.precio}" />
+													$	<th th:text="${producto.precio}" />
+													</p>
+													<p class="card-text">
+														Material solicitado: <th th:text="${producto.material}" />
 													</p>
 												</div>
 											</div>
