--- a/src/main/resources/static/css/cstyle.css
+++ b/src/main/resources/static/css/cstyle.css
@@ -584,6 +584,14 @@ form .btn input[type="submit"] {
 	height: 100%;
 	width: 100%;
 }
+.liflex2 {
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	min-height: 400px;
+	height: 100%;
+	width: 100%;
+}
 
 #flexcontainer  .flexslider {
 	border: none;
