--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -32,6 +32,10 @@
 	rel="stylesheet" type="text/css" />
 <link href="https://allfont.es/allfont.css?fonts=playfair-display"
 	rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="css/flexslider2.css" type="text/css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script src="js/jquery.flexslider.js"></script>
 <script src="js/main.js"></script>
 </head>
 
@@ -42,52 +46,20 @@
 
 	<div class="container rob">
 		<div class="row">
-			<div class="col-sm-7">
-				<div id="carouselExampleCaptions" class="carousel slide"
-					data-bs-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-							class="active"></li>
-						<li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-						<li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="img/uno.jpg" class="d-block w-100" alt="...">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>First slide label</h5>
-								<p>Nulla vitae elit libero, a pharetra augue mollis
-									interdum.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="img/dos.png" class="d-block w-100" alt="...">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>Second slide label</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="img/tres.jpg" class="d-block w-100" alt="...">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>Third slide label</h5>
-								<p>Praesent commodo cursus magna, vel scelerisque nisl
-									consectetur.</p>
-							</div>
-						</div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselExampleCaptions"
-						role="button" data-bs-slide="prev"> <span
-						class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-						class="visually-hidden">Previous</span>
-					</a> <a class="carousel-control-next" href="#carouselExampleCaptions"
-						role="button" data-bs-slide="next"> <span
-						class="carousel-control-next-icon" aria-hidden="true"></span> <span
-						class="visually-hidden">Next</span>
-					</a>
+			<div class="col-sm-6">
+				<div class="flexslider">
+					<ul class="slides">
+						<th:block th:each="slider, row:${img}">
+						<li th:style="'background-image:url(' + @{${'img/'+ slider.nombre }} + ');'"
+							class="liflex2">
+						</li>
+					</th:block>
+					</ul>
 				</div>
+				
+
 			</div>
-			<div class="col-sm-5">
+			<div class="col-sm-6">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
 					<li class="nav-item" role="presentation"><a
 						class="nav-link active" id="home-tab" data-bs-toggle="tab"
