--- a/src/main/resources/templates/AdminEliminar.html
+++ b/src/main/resources/templates/AdminEliminar.html
@@ -63,7 +63,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <a href="registro.html">
+                            <a href="/adminRegistro">
                                 <img src="images/volver.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -74,7 +74,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="agregar.html">
+                            <a href="adminAgregar.html">
                                 <img src="images/agregar.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -85,7 +85,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="modificar.html">
+                            <a href="/adminModificar">
                                 <img src="images/modificar.png" class="card-img-top" alt="...">
                             </a>
                         </button>
