--- a/src/main/resources/templates/AdminModificar.html
+++ b/src/main/resources/templates/AdminModificar.html
@@ -65,7 +65,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <a href="/registro">
+                            <a href="/adminRegistro">
                                 <img src="img/volver.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -76,7 +76,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="/mostrarMaterial">
+                            <a href="/adminMostrarMaterial">
                                 <img src="img/tipoMa.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -87,7 +87,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="/mostrarTproducto">
+                            <a href="/adminMostrarTproducto">
                                 <img src="img/tipoPro.png" class="card-img-top" alt="...">
                             </a>
                         </button>
