--- a/src/main/resources/templates/AdminRegistro.html
+++ b/src/main/resources/templates/AdminRegistro.html
@@ -47,7 +47,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-                            <a href="/modificar">
+                            <a href="/adminModificar">
                                 <img src="img/producto.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -58,7 +58,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="/mostrarMaterial">
+                            <a href="/adminMostrarMaterial">
                                 <img src="img/material.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -69,7 +69,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="/mostrarTproducto">
+                            <a href="/adminMostrarTproducto">
                                 <img src="img/tp.png" class="card-img-top" alt="...">
                             </a>
                         </button>
