--- a/src/main/resources/templates/AdminTProducto.html
+++ b/src/main/resources/templates/AdminTProducto.html
@@ -60,7 +60,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <a href="/registro">
+                            <a href="/adminRegistro">
                                 <img src="img/volver.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -71,7 +71,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="/mostrarMaterial">
+                            <a href="/adminMostrarMaterial">
                                 <img src="img/tipoMa.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -82,7 +82,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="/modificar">
+                            <a href="/adminModificar">
                                 <img src="img/product.png" class="card-img-top" alt="...">
                             </a>
                         </button>
