--- a/src/main/resources/templates/block/header.html
+++ b/src/main/resources/templates/block/header.html
@@ -22,7 +22,7 @@
 							</li>
 
 					<li><a class="navown px-2" href="/about">ABOUT US</a></li>
-					<li><a class="navown px-2" href="/usu">TRACKING</a></li>
+					<li><a class="navown px-2" href="/tracking">TRACKING</a></li>
 					<li sec:authorize="!isAuthenticated()"><a class="navown px-2"
 						th:href="@{/login}">SING IN</a></li>
 					<li><a class="navown px-2" href="/ShowCarrito">SHOP<i
