--- a/src/main/resources/templates/register2.html
+++ b/src/main/resources/templates/register2.html
@@ -38,21 +38,23 @@
 
 	<div>
 		<div class="container rob">
-			
+
 			<div th:if="${registrado==1}">
-			<th:block th:include="/block/loginBlock"></th:block></div>
+				<th:block th:include="/block/loginBlock"></th:block>
+			</div>
 			<div class="row justify-content-md-center">
 				<div class="col col-lg-5">
 					<p></p>
 
 					<div th:if="${registrado==0}">
 						<p class="fs-2">Registrar</p>
-						<form th:action="@{/ingresarUsuario}" method="POST"
+						<form th:action="@{/registerproff}" method="POST"
 							th:object="${usuario}">
 							<div class="mb-3">
 								<label for="exampleInputPassword1" class="form-label">NombreUsuario</label>
-								<input id="nombre" th:field="${usuario.nombre}" name="	"
+								<input id="nombre" th:field="${usuario.nombre}" 
 									type="text" class="form-control"> <span
+									th:errors="*{nombre}" style="color: red;"></span> <span
 									style="color: red" th:if="${username==1}">El nombre de
 									usuario ya existe, escoja otro</span>
 							</div>
@@ -67,6 +69,8 @@
 									th:field="${usuario.email}" aria-describedby="emailHelp">
 								<div id="emailHelp" class="form-text">We'll never share
 									your email with anyone else.</div>
+									 <span
+									th:errors="*{email}" style="color: red;"></span> 
 								<span style="color: red" th:if="${email==1}">El correo ya
 									existe, utilice otro correo</span>
 							</div>
