--- a/src/main/resources/templates/AdminAddTproducto.html
+++ b/src/main/resources/templates/AdminAddTproducto.html
@@ -29,14 +29,14 @@
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="js/dataTables.bootstrap4.js"></script>
 
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main2.js" type="text/javascript"></script>
     <script type="text/javascript">mostrarTabla();</script>
 </head>
 
 <body>
 
-	<th:block th:include="/block/header"></th:block>
-	
+    <th:block th:include="/block/header"></th:block>
+
     <div class="container rob">
         <div class="row justify-content-md-center">
             <div class="col col-lg-8">
@@ -58,9 +58,49 @@
             </div>
         </div>
     </div>
-	
-	<th:block th:include="/block/footer"></th:block>
-	
+
+
+    <div class="container rob">
+        <div class="row justify-content-md-center rob">
+            <div class="col-sm rob">
+                <div class="card mb-3 text-center">
+                    <div class="fotoProducto">
+                        <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <a href="/AdminRegistro">
+                                <img src="img/volver.png" class="card-img-top" alt="...">
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm rob">
+                <div class="card mb-3 text-center">
+                    <div class="fotoProducto">
+                        <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                            <a href="/adminMostrarMaterial">
+                                <img src="img/tipoMa.png" class="card-img-top" alt="...">
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm rob">
+                <div class="card mb-3 text-center">
+                    <div class="fotoProducto">
+                        <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+                            <a href="/adminMostrarTproducto">
+                                <img src="img/tipoPro.png" class="card-img-top" alt="...">
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <th:block th:include="/block/footer"></th:block>
+
 </body>
 
 </html>
