--- a/src/main/resources/templates/AdminMaterial.html
+++ b/src/main/resources/templates/AdminMaterial.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="js/dataTables.bootstrap4.js"></script>
 
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main2.js" type="text/javascript"></script>
     <script type="text/javascript">mostrarTabla(3);</script>
 </head>
 
