--- a/src/main/resources/templates/AdminModificar.html
+++ b/src/main/resources/templates/AdminModificar.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="js/dataTables.bootstrap4.js"></script>
 
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main2.js" type="text/javascript"></script>
     <script type="text/javascript" >mostrarTabla(1);</script>
 </head>
 
@@ -43,7 +43,7 @@
             <div class="col col-lg-12 text-center">
             
                 <p class=" fs-2">Producto</p>
-                <button type="submit" class="btn"><a href="/agregar">Agregar Producto</a></button>
+                <button type="submit" class="btn"><a href="/adminAgregar">Agregar Producto</a></button>
                 <table class=" table" id="tabla">
                     <thead>
                         <tr>
