--- a/bin/src/main/resources/templates/AdminEliminar.html
+++ b/bin/src/main/resources/templates/AdminEliminar.html
@@ -29,7 +29,7 @@
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
         <script src="js/dataTables.bootstrap4.js"></script>
     
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/main2.js" type="text/javascript"></script>
         <script type="text/javascript" >mostrarTabla(2);</script>
 </head>
 
@@ -63,7 +63,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <a href="registro.html">
+                            <a href="/adminRegistro">
                                 <img src="images/volver.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -74,7 +74,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="agregar.html">
+                            <a href="adminAgregar.html">
                                 <img src="images/agregar.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -85,7 +85,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="modificar.html">
+                            <a href="/adminModificar">
                                 <img src="images/modificar.png" class="card-img-top" alt="...">
                             </a>
                         </button>
