--- a/bin/src/main/resources/templates/AdminMaterial.html
+++ b/bin/src/main/resources/templates/AdminMaterial.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="js/dataTables.bootstrap4.js"></script>
 
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main2.js" type="text/javascript"></script>
     <script type="text/javascript">mostrarTabla(3);</script>
 </head>
 
@@ -42,7 +42,7 @@
             <div class="col col-lg-12 text-center">
 
                 <p class=" fs-2">Tipo de material</p>
-                <button type="submit" class="btn"><a href="/agregarMaterial">Agregar Material</a></button>
+                <button type="submit" class="btn"><a href="/adminAgregarMaterial">Agregar Material</a></button>
                 <table class=" table" id="tabla">
                     <thead>
                         <tr>
@@ -60,7 +60,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <a href="/registro">
+                            <a href="/adminRegistro">
                                 <img src="img/volver.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -71,7 +71,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="/modificar">
+                            <a href="/adminModificar">
                                 <img src="img/product.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -82,7 +82,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="/mostrarTproducto">
+                            <a href="/adminMostrarTproducto">
                                 <img src="img/tipoPro.png" class="card-img-top" alt="...">
                             </a>
                         </button>
