--- a/bin/src/main/resources/templates/AdminModificar.html
+++ b/bin/src/main/resources/templates/AdminModificar.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="js/dataTables.bootstrap4.js"></script>
 
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main2.js" type="text/javascript"></script>
     <script type="text/javascript" >mostrarTabla(1);</script>
 </head>
 
@@ -43,7 +43,7 @@
             <div class="col col-lg-12 text-center">
             
                 <p class=" fs-2">Producto</p>
-                <button type="submit" class="btn"><a href="/agregar">Agregar Producto</a></button>
+                <button type="submit" class="btn"><a href="/adminAgregar">Agregar Producto</a></button>
                 <table class=" table" id="tabla">
                     <thead>
                         <tr>
@@ -65,7 +65,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <a href="/registro">
+                            <a href="/adminRegistro">
                                 <img src="img/volver.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -76,7 +76,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                            <a href="/mostrarMaterial">
+                            <a href="/adminMostrarMaterial">
                                 <img src="img/tipoMa.png" class="card-img-top" alt="...">
                             </a>
                         </button>
@@ -87,7 +87,7 @@
                 <div class="card mb-3 text-center">
                     <div class="fotoProducto">
                         <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                            <a href="/mostrarTproducto">
+                            <a href="/adminMostrarTproducto">
                                 <img src="img/tipoPro.png" class="card-img-top" alt="...">
                             </a>
                         </button>
