--- a/bin/src/main/resources/templates/block/contact.html
+++ b/bin/src/main/resources/templates/block/contact.html
@@ -4,7 +4,7 @@
 			<label for="exampleInputEmail1" class="form-label">Contactanos por Whatsapp <i
 					class="fab fa-whatsapp"></i></label>
 			<input class="form-control" id="whats">
-			<button th:onclick="'contactUs()'" class="btn btn-primary">Submit</button>
+			<button th:onclick="'contactUs()'" class="goldbutton2 buttonown">Submit</button>
 		</div>
 	</div>
 </section>
