--- a/bin/src/main/resources/templates/tracking.html
+++ b/bin/src/main/resources/templates/tracking.html
@@ -1,53 +1,68 @@
 <!DOCTYPE html>
-<html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tracking</title>
-	<!--Boostrap  -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<!--Boostrap Script  -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-		crossorigin="anonymous"></script>
-	<!--animate css  -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tracking</title>
+<!--Boostrap  -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+<!--Boostrap Script  -->
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+	crossorigin="anonymous"></script>
+<!--animate css  -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-	<!--Own Styles  -->
-	<link rel="stylesheet" href="css/cstyle.css">
-	<!--Font Awesome-->
-	<script src="https://kit.fontawesome.com/f2dde07271.js" crossorigin="anonymous"></script>
-	<!--ALLfont.es-->
-	<link href="https://allfont.es/allfont.css?fonts=montserrat-light" rel="stylesheet" type="text/css" />
-	<link href="https://allfont.es/allfont.css?fonts=playfair-display" rel="stylesheet" type="text/css" />
+<!--Own Styles  -->
+<link rel="stylesheet" href="css/cstyle.css">
+<!--Font Awesome-->
+<script src="https://kit.fontawesome.com/f2dde07271.js"
+	crossorigin="anonymous"></script>
+<!--ALLfont.es-->
+<link href="https://allfont.es/allfont.css?fonts=montserrat-light"
+	rel="stylesheet" type="text/css" />
+<link href="https://allfont.es/allfont.css?fonts=playfair-display"
+	rel="stylesheet" type="text/css" />
 
-	<!--FlexSlider -->
-	<link rel="stylesheet" href="css/flexslider.css" type="text/css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script src="js/jquery.flexslider.js"></script>
+<!--FlexSlider -->
+<link rel="stylesheet" href="css/flexslider.css" type="text/css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script src="js/jquery.flexslider.js"></script>
 
-	<!--Own JS-->
-	<script src="js/main.js"></script>
+<!--Own JS-->
+<script src="js/main.js"></script>
 </head>
 
 <body>
 	<th:block th:include="/block/header"></th:block>
 	<main>
-		<section class="container">
-			<div class="row justify-content-md-center">
-				<div class="col col-lg-10">
-					<h2>
-						TRACKING
-					</h2>
+	<section class="container">
+		<div class="row justify-content-md-center">
+			<div class="col col-lg-10">
+				<h1>
+					Estas son tus ordenes:
+				</h1>
+			</div>
+			
+			<span sec:authorize="isAuthenticated()">Bob</span>
+			<div sec:authorize="isAuthenticated()">Text visible only to
+				authenticated users.</div>
 
-				</div>
-			</div>
-			</div>
-		</section>
+		</div>
+		</div>
+		</div>
+	</section>
 	</main>
 	<th:block th:include="/block/footer"></th:block>
 </body>
